--- a/style.css
+++ b/style.css
@@ -336,6 +336,7 @@ svg {
 
 #code{
     color:  rgb(230, 204, 8);
+    
 }
 
 #aboutme{
@@ -347,7 +348,7 @@ svg {
     text-align: center;
     font-weight: 590;
     border: none;
-    color: rgb(26, 25, 27);
+    color: #1a191b;
     background-color: rgb(230, 204, 8);
     /* font-size: 15px; */
 }
@@ -610,6 +611,99 @@ a{
     color: black;
     text-decoration: none;
 }
+
+
+/* chatbot styling */
+
+#chatbot{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 320px;
+    max-height: 400px;
+    border: solid thin rgb(30, 29, 31);
+    border-radius: 8px;
+    background-color: white;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    display: none;
+    flex-direction: column;
+    overflow: hidden;
+    z-index: 9999;
+}
+
+#chatbot-header{
+    background-color: rgb(230, 204, 8);
+    color: white;
+    padding: 12px;
+    font-weight: bold;
+    user-select: none;
+    cursor: pointer;
+}
+
+#chatbot-messages{
+    flex: 1;
+    padding: 10px;
+    overflow-y: auto;
+    background-color: #f9f9f9;
+
+
+}
+
+#chatbot-input{
+    border-top: solid 2px rgb(230, 204, 8);
+    padding: 10px ;
+    display: flex;
+    font-size: 15px;
+
+}
+#chatbot-input>input{
+    flex: 1;
+    padding: 8px;
+    font-size: 14px;
+    border: solid 2px rgb(230, 204, 8);
+    border-radius: 4px;
+    
+}
+
+#chatbot-input>button{
+    margin-left: 8px;
+    padding: 8px 14px;
+    
+    background-color: rgb(230, 204, 8);
+    border: none;
+    color: white;
+    cursor: pointer;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+#chatbot-icon{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 48px;
+    height: 48px;
+    background-color: rgb(230, 204, 8);
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10000;
+    transition: background 0.9s ease;
+}
+
+/* #chatbot-icon :hover{
+    background-color: rgb(218, 195, 16);
+} */
+#chatbot-icon>svg{
+    width: 23px;
+    height: 23px;
+    fill: white;
+    margin-bottom: 10px;
+}
+
 
 
 @media(max-width: 1024px){
